# jaffle-shop

./: .gitignore  README.md  profiles.yml  pyproject.toml
jaffle_dagster/: pyproject.toml  setup.py
jaffle_dagster/jaffle_dagster/: assets.py  definitions.py
models/: sources.yml
