[project]
name = "jaffle_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-duckdb<1.10",
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "jaffle_dagster.definitions"
code_location_name = "jaffle_dagster"
